--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@types/testing-library__jest-dom": "^5.14.6",
     "babel-loader": "^9.1.2",
     "babel-preset-react-app": "^10.0.1",
+    "bfj": "^7.0.2",
     "camelcase": "^7.0.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.8.1",
@@ -121,6 +122,7 @@
     "fs-extra": "^11.1.1",
     "html-webpack-plugin": "^5.5.3",
     "identity-obj-proxy": "^3.0.0",
+    "jszip": "^3.10.1",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^7.3.3",
@@ -130,6 +132,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-refresh": "^0.14.0",
+    "resolve": "^1.22.2",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.63.3",
     "sass-loader": "^13.3.2",
@@ -138,11 +141,12 @@
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.2",
     "terser-webpack-plugin": "^5.3.9",
-    "typescript": "^5.1.3",
+    "typescript": "^5.0.4",
     "web-vitals": "^3.3.2",
     "webpack": "^5.86.0",
     "webpack-dev-server": "^4.15.1",
     "webpack-manifest-plugin": "^5.0.0",
+    "webpack-sources": "^3.2.3",
     "workbox-webpack-plugin": "^7.0.0"
   }
 }
